# ORDO

./: .dockerignore  .env.example  .gitignore  ANCHOR-UPGRADE-SUMMARY.md  Anchor.toml  CLEANUP-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY-FIX-PLAN.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  fix-anchor-build.ps1  fix-anchor-build.sh  fix-imports.js  fix-solana-version.ps1  fix-solana-version.sh  install-solana-windows.ps1  package-lock.json  package.json  railway.json  railway.toml  security.json  setup-anchor-build.md  tsconfig.json  vitest.config.ts
.husky/: pre-commit
docs/: AGENT_REGISTRY_SETUP.md  ANCHOR-BUILD-FIX-WINDOWS.md  ANCHOR-BUILD-TROUBLESHOOTING.md  BACKEND-INTEGRATION-COMPLETE.md  JUPITER-INTEGRATION.md  MOBILE-APP-SUMMARY.md  MWA-INTEGRATION-SUMMARY.md  OWASP-IMPLEMENTATION-GUIDE.md  PROGRAM-METADATA-SETUP.md  README.md  SECURITY-AUDIT-WITH-CLAUDE.md  SECURITY-TESTING-GUIDE.md  SECURITY-TXT-GUIDE.md  UNIFIED-WALLET-ADAPTER-SUMMARY.md  WEB-APP-SUMMARY.md  X402-INTEGRATION-SUMMARY.md  api-documentation.md  docker-deployment.md  github-deployment.md  launch-checklist.md  local-development.md  railway-deployment.md  safety-and-alignment-guide.md
mobile/: App.tsx  IMPLEMENTATION-COMPLETE.md  QUICKSTART.md  README.md  app.json  package-lock.json  package.json
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: errors.rs  lib.rs  permission_hooks.rs  state.rs
programs/agent-registry/src/instructions/: mod.rs  register_agent.rs  update_reputation.rs
scripts/: README.md  (+8 more)
(+387 files in other folders)
