[package]
name = "agent-registry"
version = "0.1.0"
description = "Solana program for agent registration, discovery, and reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.22"
solana-security-txt = "1.1.2"
